--- a/.gitignore
+++ b/.gitignore
@@ -720,3 +720,4 @@
 /.idea/inspectionProfiles/profiles_settings.xml
 /MyDatasetModels/Pokemon_Classification/rps.h5
 /.idea/vcs.xml
+/MyDatasetModels/Reddit_Human_Stress_And_Anxiety/data/~$itten Assignment - Coop Data Scientist.docx
